<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lectortmo.LectorTmo"
    android:background="@color/tmoGris">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tu"
                android:textSize="25sp"
                android:text="@string/tu"
                android:textColor="@color/tmoAzul"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manga"
                android:textSize="25sp"
                android:text="@string/manga"
                android:textColor="@color/tmoAzul"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/online"
                android:textSize="25sp"
                android:text="@string/online"
                android:textColor="@color/tmoAzul"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/btnPopulares"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/tmoPopulares"
                    android:textAllCaps="false"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/tmoAzul"/>
                <Button
                    android:id="@+id/btnPSeinen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/tmoPSeinen"
                    android:textAllCaps="false"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/tmoAzul"/>
                <Button
                    android:id="@+id/btnPJosei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/tmoPJosei"
                    android:textAllCaps="false"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/tmoAzul"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopulares"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>